[gd_scene load_steps=7 format=3 uid="uid://bh63rjtyl45yi"]

[ext_resource type="Script" path="res://src/units/barricade_unit.gd" id="1_wh18g"]
[ext_resource type="Texture2D" uid="uid://bcmughyc0xshu" path="res://assets/icons/barricade.png" id="2_eeknv"]
[ext_resource type="Texture2D" uid="uid://0fasvutovcm" path="res://assets/ranks/rank_1.png" id="3_k8dfv"]
[ext_resource type="StyleBox" uid="uid://dtlq7kuxtna14" path="res://src/ui/health_bar_fill_red.tres" id="4_pq121"]
[ext_resource type="AudioStream" uid="uid://cgorl4freillu" path="res://assets/sounds/hitbarricade.wav" id="9_hvwfs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_17boe"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="BarricadeUnit" type="Node2D"]
script = ExtResource("1_wh18g")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.35, 0.35)
texture = ExtResource("2_eeknv")

[node name="RankIcon" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(10, 15)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_k8dfv")

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -19.0
offset_top = 13.0
offset_right = 5.0
offset_bottom = 18.0
theme_override_styles/background = SubResource("StyleBoxFlat_17boe")
theme_override_styles/fill = ExtResource("4_pq121")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="HitBarricadeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_hvwfs")
bus = &"Sounds"
